; ModuleID = '/home/carl/AnghaBench/qmk_firmware/users/hvp/extr_tap_dances.c_dance_3_finished.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/users/hvp/extr_tap_dances.c_dance_3_finished.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@KC_SLSH = common dso_local global i32 0, align 4
@KC_RALT = common dso_local global i32 0, align 4
@KC_W = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dance_3_finished(%struct.TYPE_3__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp eq i32 %7, 2
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i32, i32* @KC_SLSH, align 4
  %11 = call i32 @tap_code(i32 %10)
  br label %21

12:                                               ; preds = %2
  %13 = load i32, i32* @KC_RALT, align 4
  %14 = call i32 @register_code(i32 %13)
  %15 = load i32, i32* @KC_W, align 4
  %16 = call i32 @register_code(i32 %15)
  %17 = load i32, i32* @KC_RALT, align 4
  %18 = call i32 @unregister_code(i32 %17)
  %19 = load i32, i32* @KC_W, align 4
  %20 = call i32 @unregister_code(i32 %19)
  br label %21

21:                                               ; preds = %12, %9
  ret void
}

declare dso_local i32 @tap_code(i32) #1

declare dso_local i32 @register_code(i32) #1

declare dso_local i32 @unregister_code(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
